# cherrydoor-web

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile
db/: db.dbml  init.sql
doc/: docker-compose.yml
doc/markdown/: AUTH.md  INDEX.md  PERMISSIONS.md  USERS.md  WEB-UI-USERS.md
src/: db.rs  error.rs  main.rs
src/guards/: auth.rs
src/routes/: access.rs  active_access_profile.rs  auth.rs  mod.rs  status.rs  web_ui_users.rs
src/routes/access_profiles/: mod.rs  permissions.rs
src/routes/permissions/: access_profiles.rs  mod.rs  users.rs
src/routes/users/: access_codes.rs  mod.rs  permissions.rs
